--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,12 +7,42 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Track My Run | Login</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-row class="logo-row">
+    <ion-col></ion-col>
+    <ion-col></ion-col>
+  </ion-row>
+  <form (ngSubmit)="login()" #registerForm="ngForm">
+    <ion-row>
+      <ion-col>
+        <ion-list inset>
+          <ion-item>
+            <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
+      </ion-col>
+    </ion-row>
+  </form>
+
+  <!--click to register-->
+  <ion-row>
+    <ion-col>
+      <button ion-button class="register-btn" block clear (click)="createAccount()">Create New Account</button>
+    </ion-col>
+  </ion-row>
 
 </ion-content>
