--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,11 @@
 
 <ion-content padding>
   <ion-list>
-        <ion-item *ngFor="let activity of activities">{{activity}}</ion-item>
+        <ion-item *ngFor="let activity of activities">
+          {{activity.start}}
+          {{activity.end}}
+          {{activity.type}}
+        </ion-item>
+
     </ion-list>
 </ion-content>
