--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,12 +7,15 @@
 </ion-header>
 
 <ion-content padding>
+  <button ion-button fab-center round outline (click)="newActivity($event)">New activity</button>
   <ion-list>
-        <ion-item *ngFor="let activity of activities">
-          {{activity.start}}
-          {{activity.end}}
-          {{activity.type}}
+        <ion-item *ngFor="let activity of activities" (click)="showActivity($event)">
+          <p>{{activity.start}}</p>
+          <p>{{activity.end}}</p>
+          <p>{{activity.activity_type}}</p>
+          <p>{{activity.owner_id}}</p>
         </ion-item>
-
     </ion-list>
+    
+
 </ion-content>
