--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -4,18 +4,17 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<link href="/node_modules/leaflet/dist/images" rel="stylesheet">
-<link href="/node_modules/leaflet/dist/leaflet.css" rel="stylesheet">
 
 <ion-header>
-
   <ion-navbar>
     <ion-title>Track My Run | Activity</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding [attr.noScroll]="shouldScroll">
-  <div id="map"></div>
+  <div class="map-container">
+    <div id="map">
+    </div>
+  </div>
 </ion-content>
