Data is now pass from HomePage to ActivityDisplay

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding>
   <button ion-button fab-center round outline (click)="newActivity($event)">New activity</button>
   <ion-list>
-        <ion-item *ngFor="let activity of activities" (click)="showActivity($event)">
+        <ion-item *ngFor="let activity of activities" (click)="showActivity(activity)">
           <p>{{activity.start}}</p>
           <p>{{activity.end}}</p>
           <p>{{activity.activity_type}}</p>
