--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -12,7 +12,18 @@
 </ion-header>
 
 
-<ion-content padding [attr.noScroll]="shouldScroll">
+<ion-content padding class="scroll-content">
+  <ion-list>
+    <ion-item-group (ngModel)="activity">
+      <ion-item>
+        <ion-label fixed>Date {{activity.start}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label fixed>Type {{activity.activity_type}}</ion-label>
+      </ion-item>
+    </ion-item-group>
+  </ion-list>
+
   <div class="map-container">
     <div id="map">
     </div>
