--- a/src/pages/new-activity/new-activity.html
+++ b/src/pages/new-activity/new-activity.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="scroll-content">
   <ion-label color="primary">Activity Name</ion-label>
   <ion-input placeholder="Give this activity a name..." [(ngModel)]="activityName"></ion-input>
 
@@ -33,5 +33,8 @@
   </ion-list>
   <button ion-button round outline>Start {{activityType}}</button>
 
-  <div id="map"></div>
+  <div class="map-container">
+    <div id="map">
+    </div>
+  </div>
 </ion-content>
