--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 <ion-header>
   <ion-navbar>
     <ion-title>Track My Run | Activity</ion-title>
