removed map container

--- a/src/pages/new-activity/new-activity.html
+++ b/src/pages/new-activity/new-activity.html
@@ -33,9 +33,5 @@
     </ion-item>
   </ion-list>
   <button ion-button round outline>Start {{activityType}}</button>
-
-  <div class="map-container">
-    <div id="map">
-    </div>
-  </div>
+  <div id="map"></div>
 </ion-content>
