--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -20,12 +20,8 @@
       </ion-item>
       <ion-item>
         <ion-label fixed>Type {{activity.activity_type}}</ion-label>
-      </ion-item>
+      </ion-item>      
     </ion-item-group>
   </ion-list>
-
-  <div class="map-container">
-    <div id="map">
-    </div>
-  </div>
+  <div id="map"></div>
 </ion-content>
