--- a/src/pages/new-activity/new-activity.html
+++ b/src/pages/new-activity/new-activity.html
@@ -17,12 +17,9 @@
 <ion-content padding class="scroll-content">
   <ion-label color="primary">Activity Name</ion-label>
   <ion-input placeholder="Give this activity a name..." [(ngModel)]="activityName"></ion-input>
-
+  
+  <ion-label color="primary">Activity Type</ion-label>
   <ion-list radio-group [(ngModel)]="activityType">
-    <ion-list-header>
-      Activity Type
-    </ion-list-header>
-
     <ion-item>
       <ion-label>Run</ion-label>
       <ion-radio value="run"></ion-radio>
@@ -32,6 +29,7 @@
       <ion-radio value="walk"></ion-radio>
     </ion-item>
   </ion-list>
-  <button ion-button round outline>Start {{activityType}}</button>
   <div id="map"></div>
+  <button ion-button align-center round outline (click)="startActivity()">Start {{activityType}}</button>
+  
 </ion-content>
