Routes are now displayed on the map

--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -16,10 +16,10 @@
   <ion-list>
     <ion-item-group (ngModel)="activity">
       <ion-item>
-        <ion-label fixed>Date {{activity.start}}</ion-label>
+        <ion-label fixed>Date {{activity.properties.start}}</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label fixed>Type {{activity.activity_type}}</ion-label>
+        <ion-label fixed>Type {{activity.properties.activity_type}}</ion-label>
       </ion-item>      
     </ion-item-group>
   </ion-list>
