--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -16,7 +16,7 @@
 <ion-content padding class="scroll-content">
   <h1>Current Time: {{activityTime}}</h1>
   <button ion-button round outline (click)="pause()">Pause </button>
-  <button ion-button round outline (click)="stop()">Stop</button>
   <div id="map"></div>
+  <button ion-button round outline (click)="done()">Done</button>
   
 </ion-content>
