Coordinates are collected correctly and are in GeoJSON format

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -17,6 +17,6 @@
   <h1>Current Time: {{activityTime}}</h1>
   <button ion-button round outline (click)="pause()">Pause </button>
   <div id="map"></div>
-  <button ion-button round outline (click)="done()">Done</button>
+  <button ion-button round outline (click)="finishActivity()">Done</button>
   
 </ion-content>
