Route is now drawn on map when activity is active

--- a/src/pages/new-activity/new-activity.html
+++ b/src/pages/new-activity/new-activity.html
@@ -21,11 +21,11 @@
   <ion-list radio-group [(ngModel)]="activityType">
     <ion-item>
       <ion-label>Run</ion-label>
-      <ion-radio value="run"></ion-radio>
+      <ion-radio value="RUN"></ion-radio>
     </ion-item>
     <ion-item>
       <ion-label>Walk</ion-label>
-      <ion-radio value="walk"></ion-radio>
+      <ion-radio value="WALK"></ion-radio>
     </ion-item>
   </ion-list>
   <button ion-button align-center round outline (click)="startActivity()">Start {{activityType}}</button>
