Unsubscribed from location tracking and time interval when use finishes activity.

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 <ion-header>
   <ion-navbar>
-    <ion-title>Insert name here</ion-title>
+    <ion-title>{{activityName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
