A loading view is now displayed when uploading activity.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="refresh()">
+        <ion-icon name="refresh-outline"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>
       Track My Run | Home
     </ion-title>
