Distance is now recorded and displayed on homepage

--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -15,7 +15,7 @@
 
 <ion-content padding class="scroll-content">
   <ion-label>Current Time: {{activityTime}}</ion-label>
-  <ion-label>Distance(km): {{length | number}}</ion-label>
+  <ion-label>Distance(km): {{distance | number}}</ion-label>
   <button ion-button round outline (click)="finishActivity()">Done</button>
   <div id="map"></div>
   
