--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,6 +22,7 @@
       <p>{{activity.properties.end}}</p>
       <p>{{activity.properties.activity_type}}</p>
       <p>{{activity.properties.owner_id}}</p>
+      <p>{{activity.properties.distance | number}} km</p>
     </ion-item>
   </ion-list>
 
