--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,16 +13,18 @@
 
 <ion-content padding>
   <button ion-button fab-center round outline (click)="newActivity($event)">New activity</button>
-  <ion-list>
+  <ion-list >
     <ion-list-header>
       Recent Activities
     </ion-list-header>
-    <ion-item *ngFor="let activity of activities" (click)="showActivity(activity)">
-      <p><b>User:</b> {{activity.properties.owner_id}}</p>
-      <p><b>Date:</b>  {{activity.properties.start | date:"MM/dd/yyyy"}}</p>
-      <p><b>Type:</b>  {{activity.properties.activity_type}}</p>
-      <p><b>Distance (kms):</b>  {{activity.properties.distance | number}}</p>
-      <p><b>Duration:</b> {{activity.properties.duration}}</p>
+    <ion-item *ngFor="let activity of activities" (click)="showActivity(activity)" text-wrap>
+      <p class="activity-date">{{activity.properties.start | date:"medium"}}<p>
+      <p class="activity-details">
+        <b>{{activity.properties.owner.username}} </b> 
+        went for a 
+        <b>  {{activity.properties.distance | number}}  </b> km 
+        <span style="text-transform: lowercase;"> {{activity.properties.activity_type}} </span>
+      </p>
     </ion-item>
   </ion-list>
 
