--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -13,11 +13,11 @@
 
 
 <ion-content padding class="scroll-content" (ngModel)="activity">
-  <ion-label>Username: {{activity.properties.owner.username}}</ion-label>
-  <button (click)="showUser(activity.properties.owner)">See more activities by this user...</button>
-  <ion-label>Date: {{activity.properties.start | date: 'medium'}}</ion-label>
-  <ion-label>Distance (kms): {{activity.properties.distance | number}}</ion-label>
-  <ion-label>Duration: {{activity.properties.duration}}</ion-label>
-  <ion-label class="activity-type" style="text-transform: capitalize;">Type: {{activity.properties.activity_type}}</ion-label>
+  <ion-label>Username: {{activity.getOwner().username}}</ion-label>
+  <button (click)="showUser(activity.getOwner())">See more activities by this user...</button>
+  <ion-label>Date: {{activity.getStart() | date: 'medium'}}</ion-label>
+  <ion-label>Distance (kms): {{activity.getDistance() | number}}</ion-label>
+  <ion-label>Duration: {{activity.getDuration()}}</ion-label>
+  <ion-label class="activity-type" style="text-transform: capitalize;">Type: {{activity.getType()}}</ion-label>
   <div id="map"></div>
 </ion-content>
