Users can be logged out

--- a/src/pages/activity-display/activity-display.html
+++ b/src/pages/activity-display/activity-display.html
@@ -20,4 +20,5 @@
   <ion-label>Duration: {{activity.getDuration()}}</ion-label>
   <ion-label class="activity-type" style="text-transform: capitalize;">Type: {{activity.getType()}}</ion-label>
   <div id="map"></div>
+  <div id="map2"></div>
 </ion-content>
