--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons left>
+      <button ion-button icon-only (click)="logout()">
+        Logout
+      </button>
+    </ion-buttons>
     <ion-buttons end>
       <button ion-button icon-only (click)="refresh()">
         <ion-icon name="refresh-outline"></ion-icon>
