--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -23,7 +23,7 @@
       <ion-col>
         <ion-list inset>
           <ion-item>
-            <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="registerCredentials.username" required></ion-input>
+            <ion-input type="email" placeholder="Username" name="username" [(ngModel)]="registerCredentials.username" required></ion-input>
           </ion-item>
           <ion-item>
             <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required></ion-input>
